<resources>
    <string name="app_name">Event Registration</string>
    <string name="action_settings">Settings</string>
    <string name="newparticipant_hint">Who?</string>
    <string name="newparticipant_button">Add Particpiant</string>
    <string name="newevent_date_first">07-20-1969</string>
    <string name="newevent_date_label">Date ?</string>
    <string name="newevent_start_time_label">Start Time ?</string>
    <string name="newevent_start_time_first">20:17</string>
    <string name="newevent_end_time_label">End Time ?</string>
    <string name="newevent_end_time_first">22:17</string>
    <string name="newevent_hint">Event name ?</string>
    <string name="newevent_button">Add Event</string>
    <string name="participantspinner_label">Participant ?</string>
    <string name="eventspinner_label">Event ?</string>
    <string name="newregistration_button">Register</string>
    <string name="error_message_label"></string>
</resources>
